--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
-.navbar {
+/*.navbar {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     border: 2px solid red;
-}
+} */
