--- a/src/components/EmployeeSearch/EmployeeSearch.css
+++ b/src/components/EmployeeSearch/EmployeeSearch.css
@@ -13,12 +13,23 @@
 }
 
 .employee-search-response {
-    border: 2px dotted green;
-    max-width: 50%;
-    margin: 1em
+    margin: 1em;
+    border: 2px solid grey;
+    border-radius: 5%;
 }
 
 .employee-search-response-group {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
+    height: 40vh;
+    overflow-y: auto;
+    margin-top: 1em;
+}
+
+.most-recent-on-card {
+    border: 3px solid grey;
+    margin-bottom: 1em;
+    border-radius: 2%;
+    padding-bottom: 1rem
 }
